configure photo-api-service
