# basketball-api-service/api/swagger/swagger.yaml
@@ -41,7 +41,31 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-
+            
+  /photo:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: photo-controller
+    get:
+      description: Returns list of city events
+      # used as the method name of the controller
+      operationId: photo
+      parameters:
+        - name: date
+          in: query
+          description: Filtering date
+          required: false
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/PhotoResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -50,7 +74,29 @@ definitions:
     type: array
     items:
       $ref: "#/definitions/Results"
-
+  PhotoResponse:
+    type: array
+    items:
+      $ref: "#/definitions/Photo"
+      
+      
+  Photo:
+    required:
+      - img1
+    properties:
+      date:
+        type: string
+      location:
+        type: string
+      name1:
+        type: string
+      name2:
+        type: string
+      img1:
+        type: string
+      img2:
+        type: string
+        
   Results:
     required:
       - date
@@ -66,7 +112,7 @@ definitions:
       score1:
         type: string
       score2:
-        type: string
+        type: string      
 
   ErrorResponse:
     required:
