# basketball-api-service/app.js
@@ -27,10 +27,9 @@ SwaggerExpress.create(config, function (err, swaggerExpress) {
     }`;
 
   if (swaggerExpress.runner.swagger.paths["/results"]) {
-    console.log(
-      "try this:\ncurl http://127.0.0.1:" +
-      port +
-      `/api/v1/results?date=${fullDateText}`
-    );
+    console.log("try this:\ncurl http://127.0.0.1:" + port + `/api/v1/results?date=${fullDateText}`);
+  }
+  if (swaggerExpress.runner.swagger.paths["/photo"]) {
+    console.log("try this:\ncurl http://127.0.0.1:" + port + `/api/v1/photo?date=${fullDateText}`);
   }
 });
